Adds region concept to countries and returns available countries for elections (#65)
